# hw5-rongzegao

./: .gitignore  README.md  pyproject.toml
.agents/skills/aviation-preflight-assistant/: SKILL.md
.agents/skills/aviation-preflight-assistant/references/: aircraft_profiles.json  airport_profiles.json  sample_flight_plan.json
.agents/skills/aviation-preflight-assistant/scripts/: preflight_brief.py
.agents/skills/aviation-preflight-assistant/scripts/aviation_preflight/: __init__.py  briefing.py  calculations.py  providers.py  scheduler.py
.github/workflows/: ci.yml
tests/: conftest.py  test_airport_resolution.py  test_briefing_cautious.py  test_briefing_edge.py  test_briefing_normal.py  test_calculations.py  test_providers.py  test_scheduler.py
