[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aviation-preflight-assistant-skill"
version = "0.1.0"
description = "Reusable aviation preflight skill for deterministic weather/advisory and performance briefing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=.agents/skills/aviation-preflight-assistant/scripts/aviation_preflight --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
